# simu_physique

./: .gitignore  README.md  a_first_simulation.py  lines_counter.py  pyproject.toml
benchmark/: annexe_benchmark.py  benchmark.py  temp.json
core_calculation/: body_definition.py  core_simulation.py  force_definition.py  force_definition_physical_interaction.py  local_basis.py  main_simulation.py  pb.py
hands_on/: a_first_simulation.py  another_try_on_euler_integration.py  euler_integration_angle.py
hands_on/work_on_euler_angle/: another_try_on_euler_integration.py  euler_integration_angle.py  integration_with_matrix.py  quaternion_hands_on.py
scenarii_examples/: 1_free_fall.json  2_cannon_balls.json  3_heavy_light_ball.json  4_simple_spring.json  5_two_bodies_spring.json  6_three_bodies_spring.json  7_earth_and_moon.json  8_three_stars_system.json  9_free_euler_top.json  9_toupie.json  cannon_balls.json  earth_and_moon.json  heavy_light_ball.json  simple_spring.json  three_bodies_spring.json
simulation_GUI/: annexe_main_gui.py  main_gui.py  zmq_monitor.py
