[project]
name = "simphy"
version = "0.1"
description = "A solver for physical interaction in a as-much-as-you-want bodies"
authors = [
    {name = "Maxence Barré",email = "maxence.barre59@gmail.com"}
]
license = {text = "idk"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "zmq (>=0.0.0,<0.0.1)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pyqt5-qt5 (==5.15.2)",
    "pyqt5 (>=5.15.11,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
